footer icons add

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <P>Privacy Ploicy  |   Terms of use</P>
         <div class="fs-3">
           <a class="text-white m-1" href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a class="text-white m-1" href="#"><i class="fa-brands fa-instagram-square"></i></a>
+          <a class="text-white m-1" href="#"><i class="fa-brands fa-square-twitter"></i></a>
           <a class="text-white m-1" href="#"><i class="fa-brands fa-github"></i></a>
           <a class="text-white m-1" href="#"><i class="fa-brands fa-linkedin"></i></a>
           </div>
